--- a/README
+++ b/README
@@ -21,4 +21,4 @@ dbus-glib >= 0.98
 Documentation
 =============
 
-A simple quick quide with screenshots can be found at http://gmc-holle.github.io/xfdashboard/
+A simple quick guide with screenshots can be found at http://gmc-holle.github.io/xfdashboard/
