--- a/TODO
+++ b/TODO
@@ -40,7 +40,7 @@
 [prepared] Multi-monitor support (show visible windows on the screen where it belongs to, fullscreen over all screens)
 [done] Allow closing window by clicking "X" button of live-window actor
 - Allow drag-n-drop of live-window actor to quicklaunch-box view and create shortcut
-- Allow drag-n-drop of live-window actor to another workspace by dropping window in workspace-box
+[done] Allow drag-n-drop of live-window actor to another workspace by dropping window in workspace-box
 [done] React on new window appearing by creating a live-window actor for it
 [done] React on window disappearing by destroying appropiate live-window actor
 
