--- a/TODO
+++ b/TODO
@@ -24,7 +24,7 @@
 [done] Allow drag-n-drop of quicklaunch icon to workspace-box, start app in this workspace
 
 == WORKSPACE-BOX (WORKSPACE-SELECTOR) ==
-[basic] Implement workspace-box
+[done] Implement workspace-box
 [done] Clicking on workspace-actor switches to workspace and quit
 [done] Mouse-wheel on workspace-actor switches workspace without quitting but updating windows-list view
 
