--- a/README
+++ b/README
@@ -14,6 +14,7 @@ gio >= 2.30.3
 gio-unix-2.0 >= 2.30.3
 xfconf >= 4.10.0
 dbus-glib >= 0.98
+garcon >= 0.2.0
 
 ... and the dependencies of these libraries of course ;)
 
