New URL for documentation
Updated URL for documentation to new site and added URL for homepage.

--- a/README
+++ b/README
@@ -19,7 +19,13 @@ garcon >= 0.2.0
 ... and the dependencies of these libraries of course ;)
 
 
+Homepage
+========
+
+The homepage of xfdashboard is at http://xfdashboard.froevel.de/        
+
+
 Documentation
 =============
 
-A simple quick guide with screenshots can be found at http://gmc-holle.github.io/xfdashboard/
+A simple quick guide with screenshots can be found at http://xfdashboard.froevel.de/doc.html
